--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+title: Minimal theme
+logo: /assets/img/logo.png
+description: Minimal is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-minimal
-title: Welcome to the Heesun's page!
-description: Hi everyone
+url                      : "https://heesunpark26.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
