--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-minimal
 title: Heesun Park
+logo: heesun_img.JPG
 description: Welcome to the Heesun's page
 show_download: True
