--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 theme: jekyll-theme-minimal
 title: Heesun Park
-logo: heesun_img.JPG
+#logo: heesun_img.JPG
 description: Welcome to the Heesun's page
 show_download: True
 url: "https://heesunpark26.github.io/"
+
 navbar-links:
     CV: ""
