--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,23 +4,23 @@ disqus:
   disqus_shortname: 'millennial-3'
 
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-ID: 'UA-112060364-2'
+# google-ID: ''
 
 menu:
-- {name: 'Interesting Facts', folder: 'pages', file: 'facts.html'}
-- {name: 'Learning Resources', folder: 'pages', file: 'resources.html'}
-- {name: 'Sample Posts', folder: 'pages', file: 'sample-posts.html'}
-- {name: 'Documentation', folder: 'pages', file: 'documentation.html'}
-- {name: 'About', folder: 'pages', file: 'about.html'}
-- {name: 'Contact', folder: 'pages', file: 'contact.html'}
+- {name: 'About me', folder: 'pages', file: 'about-me.html'}
+- {name: 'Publications', folder: 'pages', file: 'publications.html'}
+- {name: 'Posts', folder: 'pages', file: 'posts.html'}
+- {name: 'Projects', folder: 'pages', file: 'documentation.html'}
+- {name: 'CV', folder: 'cv-folder', file: 'CV_HSpark.pdf'}
+- {name: 'Contact', folder: 'pages', file: 'contact.mc'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
-- {icon: 'facebook', link: 'https://www.facebook.com/Le.Paul.94'}
-- {icon: 'instagram', link: 'https://instagram.com/paululele'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
-- {icon: 'rss-square', link: 'feed.xml'}
+- {icon: 'twitter', link: 'https://twitter.com/HeesunPark4'}
+#- {icon: 'facebook', link: 'https://www.facebook.com/Le.Paul.94'}
+#- {icon: 'instagram', link: 'https://instagram.com/paululele'}
+- {icon: 'envelope', link: 'mailto:heesunpark26@gmail.com'}
+# - {icon: 'rss-square', link: 'feed.xml'}
 # - {icon: 'rss-square', link: 'rss-feed.xml'}
 
 # Customize site text
