--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ sass:
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:		           "Heesun Park"
-description:	       "a Jekyll theme for running a blog or publication"
-author:              "Paul Le"
+description:	       " "
+author:              " "
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
