--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -17,6 +17,7 @@ menu:
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
 - {icon: 'twitter', link: 'https://twitter.com/HeesunPark4'}
+- {icon: 'github', link: 'https://github.com/HeesunPark26'}
 #- {icon: 'facebook', link: 'https://www.facebook.com/Le.Paul.94'}
 #- {icon: 'instagram', link: 'https://instagram.com/paululele'}
 - {icon: 'envelope', link: 'mailto:heesunpark26@gmail.com'}
