--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,9 +8,9 @@ disqus:
 
 menu:
 - {name: 'Home', file: 'index.html'}
-- {name: 'Publications', folder: 'pages', file: 'publications.html'}
+#- {name: 'Publications', folder: 'pages', file: 'publications.html'}
 - {name: 'Posts', folder: 'pages', file: 'posts.html'}
-- {name: 'Projects', folder: 'pages', file: 'projects.html'}
+#- {name: 'Projects', folder: 'pages', file: 'projects.html'}
 - {name: 'CV', folder: 'cv-folder', file: 'CV_HSpark.pdf'}
 - {name: 'Contact', folder: 'pages', file: 'contact.html'}
 
