--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Heesun's Page"
+title                    : "Heesun Park"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Heesun Park"
@@ -94,7 +94,7 @@ analytics:
 # Site Author
 author:
   name             : "Heesun Park"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/heesun_img.jpg"
   bio              : "M.A. candidate majoring Cognitive Psychology at Computational Clinical Science Laboratory, Seoul National University"
   location         : "Seoul, South Korea"
   email            : "heesunpark26@gmail.com"
