--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ analytics:
 # Site Author
 author:
   name             : "Heesun Park"
-  avatar           : "/assets/images/heesun_img.jpg"
+  avatar           : /assets/images/heesun_img.JPG
   bio              : "M.A. candidate majoring Cognitive Psychology at Computational Clinical Science Laboratory, Seoul National University"
   location         : "Seoul, South Korea"
   email            : "heesunpark26@gmail.com"
