--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Projects"
     url: /assets/projects/
   - title: "Presentations"
-    url: /assets/presentations/
+    url: /presentations/
   - title: "Publications"
     url: /assets/publications
   - title: "CV"
