--- a/_config.yml
+++ b/_config.yml
@@ -256,7 +256,10 @@ tag_archive:
 #   permalinks:
 #     category: /categories/:name/
 #     tag: /tags/:name/
-
+collections:
+  presentations:
+    output: true
+    permalink: /:collection/:path/
 
 # HTML Compression
 # - https://jch.penibelst.de/
@@ -279,3 +282,11 @@ defaults:
       comments: # true
       share: true
       related: true
+  # _presentations
+  - scope:
+      path: ""
+      type: presentations
+    values:
+      layout: single
+      author_profile: true
+      share: true
