--- a/_config.yml
+++ b/_config.yml
@@ -288,5 +288,5 @@ defaults:
       type: presentations
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       share: true
