--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
   - title: "Presentations"
     url: /presentations/
   - title: "Publications"
-    url: /assets/publications
+    url: /publications/
   - title: "CV"
     url: /assets/cv-folder/CV_HSpark_2020Sep.pdf
   # - title: "Sitemap"
