--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "Projects"
-    url: /assets/projects/
+    url: /projects/
   - title: "Presentations"
     url: /presentations/
   - title: "Publications"
