--- a/_config.yml
+++ b/_config.yml
@@ -290,3 +290,10 @@ defaults:
       layout: single
       author_profile: false
       share: true
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: single
+      author_profile: false
+      share: true
