--- a/_config.yml
+++ b/_config.yml
@@ -260,6 +260,9 @@ collections:
   presentations:
     output: true
     permalink: /:collection/:path/
+  projects:
+    output: true
+    permalink: /:collection/:path/
 
 # HTML Compression
 # - https://jch.penibelst.de/
