--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : "HeesunPark4"
 facebook:
   username               :
   app_id                 :
@@ -123,7 +123,7 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/HeesunPark"
+      url: "https://twitter.com/HeesunPark4"
     # - label: "Facebook"
     #   icon: "fab fa-fw fa-facebook-square"
     #   url:
