--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # ---------------------------------------------------------------
 
 # Site
-title: Learning by Doing
+title: Drive it like you stole it
 subtitle:
 description:
 author: Heesun Park
