--- a/_config.yml
+++ b/_config.yml
@@ -464,7 +464,7 @@ gitalk:
 #google_site_verification:
 
 # Google Analytics
-#google_analytics:
+google_analytics: 'G-JFLP6TKXPG'
 
 # Yandex Webmaster tools verification setting
 # See: https://webmaster.yandex.ru/
