--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # ---------------------------------------------------------------
 
 # Site
-title: Drive it like you stole it
+title: Heesun's study log
 subtitle:
 description:
 author: Heesun Park
